--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Firebase App (the core Firebase SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js"></script>
+
+<!-- Add Firebase products that you want to use -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
+
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -38,6 +47,26 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
+  <script>
+    // Your Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyA4o53lBTn_kW42HfX-6T01XLA4T6MOwnY",
+      authDomain: "real-time-data-331a1.firebaseapp.com",
+      databaseURL: "https://real-time-data-331a1-default-rtdb.firebaseio.com",
+      projectId: "real-time-data-331a1",
+      storageBucket: "real-time-data-331a1.appspot.com",
+      messagingSenderId: "778695777347",
+      appId: "1:778695777347:web:fc8900316749bf870d88f6",
+      measurementId: "G-LS7D1KEENZ"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
 </head>
 <body>
   <script>
